--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sample app</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src= "./scripts.js"></script>
+    <script src= "./script.js"></script>
 </head>
 <body onload="getCount()" class="app-style">
-    <p id="greetingTxt">hello World</p>
-    <button class="greetingButton-style" onclick="changeGreeting()">change greeting</button>
-    <P id="vistorCountTxt">visitor count: 78</P>
+     <div class ="flex flex-col justify-center items-center h-screen">  
+      <p class="font-bold text 2xl py-4" 
+      id="greetingTxt">hello World</p>       
+      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-4 px-6 rounded" onclick="changeGreeting()">change greeting</button>
+      <P class="font-semibold text-lg py-4" id="vistorCountTxt">visitor count: 78</P>
+     </div>
 </body>
 </html>
